<resources>
    <string name="app_name">Easy Volleyball Scorekeeper</string>
    <string name="_0">0</string>
    <string name="clear_score">Clear Score</string>
    <string name="settings">Settings</string>
    <string name="send_sms">Send Sms</string>
    <string name="sms_outline">SMS outline</string>
    <string name="default_sms_text_outline">Text message outline</string>
    <string name="insert_new_variable">Add Variable</string>
    <string name="save_changes">Save Changes</string>
    <string name="_1">1</string>
    <string name="set_down">Set Down</string>
    <string name="to">TO</string>
    <string name="save">Save</string>
    <string name="vibrate">Vibration feedback</string>
    <string name="sets_per_match">Sets per match</string>
    <string name="sets">Sets</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="seperate_with_coma">You can text more then one number at once. Separate phone numbers using a coma (,)</string>
    <string name="_5_sets">5 Sets</string>
    <string name="_3_sets">3 Sets</string>
    <string name="home_score">Home Score</string>
    <string name="away_score">Away Score</string>
    <string name="insert">Insert</string>
    <string name="current_set">Current Set</string>
    <string name="sets_won">Sets Won</string>
    <string name="send_text_to">Send text to:</string>
    <string name="leftserve">leftServe</string>
    <string name="rightserve">rightServe</string>
    <string name="home_team_name">Home</string>
    <string name="away_team_name">Away</string>
    <string name="reset">Reset Match</string>
    <string name="change_courts">Change Sides</string>
    <string name="undo">Undo</string>
    <string name="changing_this_setting_will_reset_the_current_match">Changing these settings will reset the current match</string>
    <string name="score_keeper">Score Keeper</string>
    <string name="prompt_to_switch_sides">Prompt to switch sides</string>
    <string name="if_off_sides_will_be_changed_automatically">If off, sides will be changed automatically when a court switch should happen in the match.</string>
    <string name="you_can_also_edit_team_names_by_clicking_them_in_the_main_page">On the main page you can edit team names by clicking on them. You can change colors by long pressing the scores.</string>
    <string name="help">Help</string>
    <string name="message_preview">Message Preview</string>
    <string name="message">Message</string>
    <string name="team_name">Team Name</string>
    <string name="this_allows_texts_to_be_sent_faster_without_the_confirmation_dialog_if_this_is_on_text_messages_could_be_sent_accidentally">This allows texts to be sent faster without the confirmation dialog. If this is on text messages could be sent accidentally.</string>
    <string name="send_text_without_confirmation">Send text without confirmation</string>
    <string name="notify_at_end_of_set">Notify at end of set</string>
    <string name="prepare_new_set">Prepare New Set</string>
    <string name="turning_this_off_will_make_it_so_that_you_must_prepare_new_sets_and_matches_by_yourself_you_can_prepare_a_new_set_or_match_by_clicking_the_more_options_icon">Turning this off will make it so that you must prepare new sets and matches by yourself. You can prepare a new set or match by clicking the more options icon.</string>
    <string name="_away_team_name">Away Team Name</string>
    <string name="_home_team_name">Home Team Name</string>
    <string name="score">Score</string>
    <string name="animations">Animations</string>
    <string name="show_send_sms_popup_after_new_set_is_prepared">Show send SMS popup after set/match</string>
    <string name="rate_app">Rate App</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="how_do_i_edit_team_names_without_entering_settings">How do I edit team names without entering settings?</string>
    <string name="match_history">Match History</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="away_color">Away Color</string>
    <string name="home_color">Home Color</string>
    <string name="how_do_i_see_the_match_history">How do I see the match history?</string>
    <string name="home_team_score_0_0_away_team_score">(Home team score) 0 - 0 (Away team score)</string>
    <string name="indoor">Indoor</string>
    <string name="beach">Beach</string>
    <string name="type_of_volleyball">Type of volleyball</string>
    <string name="buy_me_a_coffee">Buy Me A Coffee</string>
    <string name="if_you_like_this_app_please_consider_leaving_me_a_small_donation_this_would_help_me_to_continue_to_make_my_apps_free_and_without_adds">If you like this app please consider leaving me a small donation. This would help me to continue to make my apps free and without adds. Thank you for any donations!</string>
    <string name="sms">SMS</string>
    <string name="team_names">Team Names</string>
    <string name="game_type">Game Type</string>
    <string name="appearance">Appearance</string>
    <string name="add_contact">Add a contact</string>
    <string name="load_contact">Load Contact</string>
    <string name="if_off_messages_will_be_sent_without_confirmation">If off messages will be sent without confirmation</string>
    <string name="post_set_message_outline">Post set message outline</string>
    <string name="sms_post_set_match">SMS Post Set/Match</string>
    <string name="when_this_setting_is_on_texts_will_be_sent_automatically_at_the_end_of_sets_and_matches">When this setting is on texts will be sent automatically at the end of sets and matches.</string>
    <string name="home">Home</string>
    <string name="away">Away</string>
    <string name="my_player_on_off_court">On/Off court</string>
    <string name="player_name">Player Name</string>
    <string name="my_player_on_off">My player on/off</string>
    <string name="feature_only_in_portrait_orientation">Feature only in portrait orientation</string>
    <string name="show_player_on_off_court_switch">Show player on/off court switch</string>
    <string name="general">General</string>
    <string name="my_player">My Player</string>
    <string name="on_off">On/Off</string>
    <string name="name">Name</string>
    <string name="currently_serving">Currently Serving</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="get_pro_text">To remove ads and unlock all pro features, install the pro key.</string>
    <string name="get_pro_buton">Remove ads and unlock all features</string>
    <string name="get_amazon">Currently messages will be sent by launching your main SMS app. This is due to a new Play Store privacy policy. You can download this app from the Amazon Appstore to be able to send messages directly from within the app.</string>
    <string name="how_to_find_on_amazon">You can find the app by searching Volleyball Scorekeeper, or Andrew Heschl.</string>
</resources>
