<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_sms"
        android:orderInCategory="94"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/send_sms"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="95"
        android:icon="@drawable/ic_baseline_undo_24"
        android:title="@string/undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_switch_courts"
        android:orderInCategory="96"
        android:icon="@drawable/ic_baseline_swap_horiz_24"
        android:title="@string/change_courts"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_new_set"
        android:orderInCategory="97"
        android:title="@string/prepare_new_set" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="98"
        android:title="@string/reset" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/settings">
    </item>

    <item
        android:id="@+id/stream_game"
        android:orderInCategory="101"
        android:title="Stream Score">
    </item>

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="101"
        android:title="@string/rate_app">
    </item>

    <item
        android:id="@+id/remove_ads"
        android:orderInCategory="102"
        android:title="@string/remove_ads">
    </item>

    <!--<item
        android:id="@+id/action_coffee"
        android:orderInCategory="101"
        android:title="@string/buy_me_a_coffee">
    </item>-->




</menu>