<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@drawable/popup"
    tools:context="aheschl.volleyballscoretracker.EditNumbers">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:text="@string/phone_numbers"/>
        <ImageButton
            android:layout_weight="1"
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffffff"
            android:src="@drawable/ic_baseline_arrow_back_24"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/seperate_with_coma"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editNumbersField"
        android:hint="Edit Numbers"
        android:lines="1"
        android:inputType="phone"
        android:minLines="1"
        android:gravity="top|start"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:layout_margin="8dp"/>


    <Button
        android:id="@+id/addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_margin="8dp"
        android:paddingStart="20dp"
        android:textColor="#ffffff"
        android:paddingEnd="20dp"
        android:backgroundTint="@color/colorPrimary"

        android:contentDescription="@string/load_contact"
        android:text="@string/add_contact"
        android:textAllCaps="false" />


</LinearLayout>
