<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:background="@drawable/popup"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/message"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textMessageField"
            android:hint="@string/post_set_message_outline"
            android:layout_margin="8dp"
            android:lines="3"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:gravity="top|start"
            android:minWidth="400dp"
            android:maxLines="10"
            android:scrollbars="vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:text="@string/message_preview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:id="@+id/messagePreview"
            android:text="@string/message_preview"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/home_team_name"/>

                    <Button
                        android:id="@+id/homeScore"
                        android:textAllCaps="false"
                        android:backgroundTint="#F1F1F1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:text="@string/score" />

                    <Button
                        android:id="@+id/homeTeamName"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:backgroundTint="#F1F1F1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/team_name" />

                    <Button
                        android:id="@+id/home_sets"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:backgroundTint="#F1F1F1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:text="@string/sets_won" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textSize="20sp"
                        android:text="@string/away_team_name"/>

                    <Button
                        android:id="@+id/awayScore"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:backgroundTint="#F1F1F1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/score" />


                    <Button
                        android:id="@+id/awayTeamName"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:backgroundTint="#F1F1F1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/team_name" />

                    <Button
                        android:id="@+id/away_sets"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:backgroundTint="#F1F1F1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_gravity="center"
                        android:text="@string/sets_won" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/setOrMatch"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:backgroundTint="#F1F1F1"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="Set or Match" />
            <Button
                android:id="@+id/winningTeam"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:backgroundTint="#F1F1F1"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Winning Team" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/save"
            android:layout_gravity="end"
            android:src="@drawable/save"
            android:contentDescription="@string/save" />


    </LinearLayout>


</ScrollView>

