<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:background="@drawable/popup"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:textSize="22sp"
                android:textColor="#000000"
                android:text="Message outline"/>
            <ImageButton
                android:layout_weight="1"
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:src="@drawable/ic_baseline_arrow_back_24"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:clickable="false"
            android:background="#000000"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textMessageField"
            android:hint="@string/default_sms_text_outline"
            android:layout_margin="8dp"
            android:lines="4"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:minWidth="400dp"
            android:gravity="top|start"
            android:maxLines="10"
            android:scrollbars="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:text="@string/message_preview"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:textColor="#000000"
            android:id="@+id/messagePreview"
            android:text="@string/message_preview"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:textSize="20sp"
                        android:text="@string/home_team_name"/>

                    <Button

                        android:layout_margin="8dp"
                        android:paddingStart="20dp"
                        android:textColor="#ffffff"
                        android:paddingEnd="20dp"
                        android:backgroundTint="@color/colorPrimary"

                        android:id="@+id/homeScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:textAllCaps="false"
                        android:text="@string/score" />

                    <Button
                        android:id="@+id/homeTeamName"
                        android:layout_width="wrap_content"
                        android:layout_margin="8dp"
                        android:paddingStart="20dp"
                        android:textColor="#ffffff"
                        android:paddingEnd="20dp"
                        android:backgroundTint="@color/colorPrimary"                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAllCaps="false"
                        android:text="@string/team_name" />

                    <Button
                        android:id="@+id/home_sets"
                        android:layout_width="wrap_content"
                        android:layout_margin="8dp"
                        android:paddingStart="20dp"
                        android:textColor="#ffffff"
                        android:paddingEnd="20dp"
                        android:backgroundTint="@color/colorPrimary"                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:layout_marginTop="5dp"
                        android:text="@string/sets_won" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="8dp"
                        android:textSize="20sp"
                        android:text="@string/away_team_name"/>

                    <Button
                        android:id="@+id/awayScore"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:paddingStart="20dp"
                        android:textColor="#ffffff"
                        android:paddingEnd="20dp"
                        android:backgroundTint="@color/colorPrimary"                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAllCaps="false"
                        android:text="@string/score" />

                    <Button
                        android:id="@+id/awayTeamName"
                        android:layout_width="wrap_content"
                        android:layout_margin="8dp"
                        android:paddingStart="20dp"
                        android:textColor="#ffffff"
                        android:paddingEnd="20dp"
                        android:backgroundTint="@color/colorPrimary"                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAllCaps="false"
                        android:text="@string/team_name" />

                    <Button
                        android:id="@+id/away_sets"
                        android:layout_width="wrap_content"
                        android:layout_margin="8dp"
                        android:paddingStart="20dp"
                        android:textColor="#ffffff"
                        android:paddingEnd="20dp"
                        android:backgroundTint="@color/colorPrimary"                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textAllCaps="false"
                        android:layout_gravity="center"
                        android:text="@string/sets_won" />


                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:clickable="false"
                android:background="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:text="@string/my_player"/>

            <Button
                android:id="@+id/myPlayer"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:paddingStart="20dp"
                android:textColor="#ffffff"
                android:paddingEnd="20dp"
                android:backgroundTint="@color/colorPrimary"                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:text="@string/on_off" />

            <Button
                android:id="@+id/playerName"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:paddingStart="20dp"
                android:textColor="#ffffff"
                android:paddingEnd="20dp"
                android:backgroundTint="@color/colorPrimary"                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:text="@string/name" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:clickable="false"
                android:background="#000000"/>

            <Button
                android:id="@+id/set"
                android:layout_width="wrap_content"
                android:layout_margin="8dp"
                android:paddingStart="20dp"
                android:textColor="#ffffff"
                android:paddingEnd="20dp"
                android:backgroundTint="@color/colorPrimary"                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:text="@string/current_set" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>

